--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,11 +3,11 @@
     <div class="container">
       <%= link_to "sample app", root_path, id: "logo" %>
       <nav>
-        <ul class="nav pull-rigth">
+        <ul class="nav pull-right">
           <li><%= link_to "Home", root_path %></li>
           <li><%= link_to "Help", help_path %></li>
-          <%if signed_in? %>
-            <li><%= link_to "Users", '#' %></li>
+          <% if signed_in? %>
+            <li><%= link_to "Users", users_path %></li>
             <li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 Account <b class="caret"></b>
@@ -19,11 +19,11 @@
                 <li>
                   <%= link_to "Sign out", signout_path, method: "delete" %>
                 </li>
-              </ul> 
+              </ul>
             </li>
-            <% else %>
-              <li><%= link_to "Sign in", signin_path %></li>
-            <% end %>
+          <% else %>
+            <li><%= link_to "Sign in", signin_path %></li>
+          <% end %>
         </ul>
       </nav>
     </div>
